2406 [AviSynth] only load portable DirectShowSource.dll if portable mode is used
2405 [Log] improved avs log information
2404 [MediaInfo] ignore phantom audio tracks
2403 [M2TS Muxer] added A_LPCM as Audio Codec ID for WAV/PCM files. Bug #730
2402 [Queue] extended "Open" option to open input/output files/folders and in any job state if available
2401 [Audio Encoder] fixed TimeStretch support for 23.976 <--> 25 fps conversion (regression of 2383)
2400 [MediaInfo] added log output if fps cannot be determined
2399 [x264] if --bluray-compat is used without a BluRay device selected:
            --open-gop is not forced anymore
            --weightp is restricted to 0 or 1
2398 [Queue] allowed to open output folder when job is done. This is available via the right click on the Job Queue.
2397 [MediaInfo] use 23.976 instead of 99 as default value if fps cannot be determined
2396 [AutoEncode] fixed mp4 output (regression of 2381)
2395 [x264] only download 10bit files if enabled
2394 [x264] added x264 10bit to the update server
2393 [Main] create external job muxer jobs with dependencies (regression of 2381)
2392 [x264] added 10 bit encoding support. This can be enabled through the MeGUI settings. Thanks to Detmek for the tests.
2391 [Aften] do not log progress messages
2390 [OneClick] improved AddBorders calculation for AviSynth 2.6
2389 [Main] updated the correct video output file extension according to the muxer used (regression of 2381)
2388 [x264] added --stitchable option (requires x264 revision 2345+)
2387 [Update] update server will not be changed during every update check
2386 [AVS Script Creator] changed default mod value to 8
2385 [Main] added FrameRate information concerning external JobMuxer
2384 [MediaInfo] added Bits Depth information in the log
2383 [Audio Encoder] added TimeStretch support. Feature Request #493
2382 [x264] force to use external mp4 muxer because the current x264 build doesn't have the mp4 support